--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,5 @@
+@import '../scss/font';
 @import '../scss/variable';
 @import '../scss/global';
 @import '../scss/header';
-@import '../scss/footer';
+@import '../scss/footer'; 
