--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -7,3 +7,14 @@
     font-size: 30px;
   }
 }
+
+.container {
+  padding: 0 25px;
+  margin: 0 auto;
+  max-width: 1400px;
+  width: 100%;
+
+  @media #{$mq-mobile} {
+    padding: 0 16px;
+  }
+}
