--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -4,7 +4,7 @@ $fontFamilyBold:  'BMWBold', sans-serif;
 
 //peso das fonts
 $light: '300';
-$bold: 'bold';
+$bold: bold;
 
 //Adicionando váriaveis de estilo geral
 $branco: #ffffff;
@@ -12,6 +12,7 @@ $preto: #000000;
 $cinza-font: #666666;
 $cinza-font-escura: #262626;
 $cinza-claro: #e6e6e6;
+$cinza-claro2: #bbbbbb;
 $cinza-escuro: #707070;
 $azul-claro: #1C69D4;
 $azul-escuro: #0966AF;
