--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,7 @@
 @import '../scss/font';
 @import '../scss/variable';
+@import '../scss/extends';
 @import '../scss/global';
 @import '../scss/header';
+@import '../scss/showcase';
 @import '../scss/footer'; 
