--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,20 +1,49 @@
 @font-face {
-  font-family: "BMWLight";
-  src: url("../fonts/BMWTypeNext-Light.20210426144302") format("ttf"); }
+  font-family: 'BMWLight';
+  src: url("/src/fonts/BMW-Light.ttf") format("truetype"); }
 
 @font-face {
-  font-family: "BMWBold";
-  src: url("../fonts/BMWTypeNext-Bold.20210426144302.ttf") format("ttf"); }
+  font-family: 'BMWBold';
+  src: url("/src/fonts/BMW-Bold.ttf") format("truetype"); }
+
+@font-face {
+  font-family: 'bmw-icons';
+  src: url("../icons/fontello/font/bmw-icons.eot?98364672");
+  src: url("../icons/fontello/font/bmw-icons.eot?98364672#iefix") format("embedded-opentype"), url("../icons/fontello/font/bmw-icons.woff?98364672") format("woff"), url("../icons/fontello/font/bmw-icons.ttf?98364672") format("truetype"), url("../icons/fontello/font/bmw-icons.svg?98364672#bmw-icons") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+.button, .header__button-fixed button, .showcase__button--cotacao, .showcase__button--contato {
+  color: #ffffff;
+  font-family: "BMWBold", sans-serif;
+  font-weight: bold;
+  font-size: 0.75rem;
+  height: 35px;
+  width: 47%;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
 * {
   font-family: "BMWLight", sans-serif;
-  font-size: 1rem;
+  font-size: 100%;
   color: #666666; }
-  @media (max-width: 599px) {
-    * {
-      font-size: 30px; } }
+
+html {
+  scroll-behavior: smooth; }
+
+body {
+  width: 100%;
+  position: relative; }
+
+main {
+  margin-top: 105px; }
+
+a {
+  text-decoration: none; }
 
 .container {
+  box-sizing: border-box;
   padding: 0 25px;
   margin: 0 auto;
   max-width: 1400px;
@@ -22,3 +51,175 @@
   @media (max-width: 599px) {
     .container {
       padding: 0 16px; } }
+
+.splide__pagination__page {
+  background-color: #e6e6e6;
+  height: 14px;
+  opacity: 1;
+  width: 14px; }
+  .splide__pagination__page.is-active {
+    background-color: #1C69D4;
+    height: 14px;
+    opacity: 1;
+    width: 14px;
+    transform: scale(1); }
+
+.fontello {
+  font-family: "bmw-icons";
+  font-style: normal;
+  font-weight: normal;
+  speak: never;
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: 0;
+  text-align: center;
+  /* opacity: .8; */
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: 0;
+  /* You can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */ }
+
+.header {
+  background-color: #ffffff;
+  height: 61px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 10; }
+  .header__flex {
+    height: auto;
+    padding: 13px 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .header__contato-mobile {
+    display: none; }
+    @media (max-width: 599px) {
+      .header__contato-mobile {
+        display: block; }
+        .header__contato-mobile a {
+          display: flex;
+          align-items: center;
+          justify-content: flex-start; }
+        .header__contato-mobile span {
+          font-size: 0.87rem;
+          color: #666666;
+          font-family: "BMWBold", sans-serif;
+          font-weight: bold;
+          line-height: 0.85rem; }
+        .header__contato-mobile i {
+          margin-right: 6px;
+          font-size: 0.87rem;
+          color: #666666;
+          font-weight: bold;
+          line-height: 0.85rem; } }
+  @media (min-width: 600px) {
+    .header__contato-desktop {
+      display: none; } }
+  .header__logo a {
+    display: flex; }
+  .header__logo img {
+    width: 34.5px; }
+  .header__button-fixed button {
+    background-color: #1C69D4;
+    color: #ffffff;
+    font-size: 0.875rem;
+    height: 45px;
+    width: 100%; }
+
+.showcase__title {
+  margin: 30px 0; }
+  .showcase__title h2 {
+    font-size: 1.25rem;
+    text-transform: uppercase;
+    text-align: center;
+    width: 100%; }
+
+.showcase__grid {
+  display: grid;
+  width: 100%; }
+  @media (max-width: 599px) {
+    .showcase__grid {
+      grid-template-columns: repeat(1, 1fr);
+      grid-template-rows: repeat(8, 1fr);
+      grid-gap: 20px; } }
+
+@media (max-width: 599px) {
+  .showcase__item {
+    margin-bottom: 25px; } }
+
+.showcase__figure {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
+
+.showcase__titulo {
+  color: #262626;
+  font-size: 1.25rem;
+  line-height: 1.65rem;
+  margin: 10px 0 20px 0;
+  text-align: left; }
+
+.showcase__buttons {
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between; }
+
+.showcase__button--cotacao {
+  background-color: #1C69D4; }
+
+.showcase__button--contato {
+  background-color: #666666; }
+
+.showcase__share {
+  display: flex; }
+  .showcase__share span {
+    font-size: 0.875rem; }
+  .showcase__share a:first-of-type {
+    margin: 0 16px; }
+  .showcase__share i {
+    font-size: 1.5rem; }
+
+.footer {
+  background-color: #e6e6e6;
+  padding: 30px 0;
+  width: 100%; }
+  .footer__flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+  .footer__copyright {
+    margin-bottom: 30px; }
+  .footer hr {
+    background-color: #bbbbbb;
+    height: 1px;
+    margin: 30px 0;
+    width: 100%; }
+  .footer p {
+    color: #262626;
+    font-size: 0.625rem;
+    line-height: 1rem;
+    text-align: center; }
+  .footer__develop {
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .footer__develop span {
+      color: #262626;
+      font-size: 0.75rem;
+      line-height: 1rem;
+      margin-right: 10px;
+      text-align: center; }
