--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,6 +15,7 @@
 
 .button, .header__button-fixed button, .showcase__button--cotacao, .showcase__button--contato {
   color: #ffffff;
+  cursor: pointer;
   font-family: "BMWBold", sans-serif;
   font-weight: bold;
   font-size: 0.75rem;
@@ -23,6 +24,24 @@
   display: flex;
   justify-content: center;
   align-items: center; }
+
+.link-topo, .header__button-default {
+  color: #ffffff;
+  font-family: "BMWBold", sans-serif;
+  font-weight: bold;
+  font-size: 0.875rem;
+  cursor: pointer; }
+  .link-topo span, .header__button-default span,
+  .link-topo i,
+  .header__button-default i {
+    color: #ffffff;
+    font-size: 0.875rem;
+    text-transform: uppercase; }
+  
+  .link-topo i,
+  .header__button-default i {
+    margin-right: 4px;
+    font-size: 1rem; }
 
 * {
   font-family: "BMWLight", sans-serif;
@@ -38,6 +57,9 @@ body {
 
 main {
   margin-top: 105px; }
+  @media (min-width: 1200px) {
+    main {
+      margin-top: 150px; } }
 
 a {
   text-decoration: none; }
@@ -95,9 +117,13 @@ a {
   background-color: #ffffff;
   height: 61px;
   width: 100%;
+  transition: all 0.3s ease;
   position: fixed;
   top: 0;
   z-index: 10; }
+  @media (min-width: 1200px) {
+    .header {
+      height: 150px; } }
   .header__flex {
     height: auto;
     padding: 13px 0;
@@ -105,61 +131,126 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center; }
+    @media (min-width: 1200px) {
+      .header__flex {
+        padding: 30px 0; } }
   .header__contato-mobile {
-    display: none; }
-    @media (max-width: 599px) {
+    display: block; }
+    @media (min-width: 1200px) {
       .header__contato-mobile {
-        display: block; }
-        .header__contato-mobile a {
-          display: flex;
-          align-items: center;
-          justify-content: flex-start; }
-        .header__contato-mobile span {
-          font-size: 0.87rem;
-          color: #666666;
-          font-family: "BMWBold", sans-serif;
-          font-weight: bold;
-          line-height: 0.85rem; }
-        .header__contato-mobile i {
-          margin-right: 6px;
-          font-size: 0.87rem;
-          color: #666666;
-          font-weight: bold;
-          line-height: 0.85rem; } }
-  @media (min-width: 600px) {
-    .header__contato-desktop {
-      display: none; } }
+        display: none; } }
+    .header__contato-mobile a {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start; }
+    .header__contato-mobile span {
+      font-size: 0.87rem;
+      color: #666666;
+      font-family: "BMWBold", sans-serif;
+      font-weight: bold;
+      line-height: 0.85rem; }
+    .header__contato-mobile i {
+      margin-right: 6px;
+      font-size: 0.87rem;
+      color: #666666;
+      font-weight: bold;
+      line-height: 0.85rem; }
+  .header__desktop {
+    display: none; }
+    @media (min-width: 1200px) {
+      .header__desktop {
+        display: flex;
+        flex-direction: column; } }
+  .header__desktop-contato {
+    display: flex;
+    margin-bottom: 30px; }
+  .header__button-default {
+    background-color: #000000;
+    height: auto;
+    padding: 12px 18px;
+    margin-right: 30px;
+    width: auto; }
+    .header__button-default--whatsapp {
+      background-color: #25D366; }
+    .header__button-default:last-of-type {
+      margin-right: 0; }
+  .header__desktop-menu {
+    display: flex;
+    padding: 0 5px; }
+    .header__desktop-menu .header__menuitem {
+      margin-right: 60px; }
+      .header__desktop-menu .header__menuitem a {
+        font-size: 0.875rem;
+        font-family: "BMWBold", sans-serif;
+        font-weight: bold; }
   .header__logo a {
     display: flex; }
   .header__logo img {
-    width: 34.5px; }
+    width: 34.5px;
+    height: auto; }
+    @media (min-width: 1200px) {
+      .header__logo img {
+        width: 92px; } }
+  @media (min-width: 1200px) {
+    .header__button-fixed {
+      display: none; } }
   .header__button-fixed button {
     background-color: #1C69D4;
     color: #ffffff;
     font-size: 0.875rem;
     height: 45px;
     width: 100%; }
+  @media (min-width: 1200px) {
+    .header.scroll-on {
+      height: 124px;
+      -webkit-box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.75);
+      -moz-box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.75);
+      box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.75); } }
+  @media (min-width: 1200px) {
+    .header.scroll-on .header__flex {
+      padding: 15px 0; } }
+
+.splide-desktop {
+  display: none; }
+  @media (min-width: 900px) {
+    .splide-desktop {
+      display: flex; } }
+
+@media (min-width: 900px) {
+  .splide-mobile {
+    display: none; } }
 
 .showcase__title {
   margin: 30px 0; }
   .showcase__title h2 {
+    color: #262626;
     font-size: 1.25rem;
     text-transform: uppercase;
     text-align: center;
     width: 100%; }
+    @media (min-width: 1200px) {
+      .showcase__title h2 {
+        font-size: 2.5rem; } }
 
 .showcase__grid {
   display: grid;
-  width: 100%; }
-  @media (max-width: 599px) {
+  width: 100%;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(8, 1fr);
+  grid-gap: 20px; }
+  @media (min-width: 600px) {
     .showcase__grid {
-      grid-template-columns: repeat(1, 1fr);
-      grid-template-rows: repeat(8, 1fr);
-      grid-gap: 20px; } }
-
-@media (max-width: 599px) {
-  .showcase__item {
-    margin-bottom: 25px; } }
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(4, 1fr); } }
+  @media (min-width: 900px) {
+    .showcase__grid {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(3, 1fr); } }
+  @media (min-width: 1200px) {
+    .showcase__grid {
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      gap: 50px; } }
 
 .showcase__figure {
   display: flex;
@@ -180,9 +271,16 @@ a {
 
 .showcase__button--cotacao {
   background-color: #1C69D4; }
+  @media (min-width: 1200px) {
+    .showcase__button--cotacao {
+      font-size: 0.75rem;
+      width: 100%; } }
 
 .showcase__button--contato {
   background-color: #666666; }
+  @media (min-width: 1200px) {
+    .showcase__button--contato {
+      display: none; } }
 
 .showcase__share {
   display: flex; }
@@ -196,6 +294,7 @@ a {
 .footer {
   background-color: #e6e6e6;
   padding: 30px 0;
+  margin-top: 50px;
   width: 100%; }
   .footer__flex {
     display: flex;
@@ -203,6 +302,11 @@ a {
     justify-content: center; }
   .footer__copyright {
     margin-bottom: 30px; }
+    @media (min-width: 1200px) {
+      .footer__copyright {
+        margin-bottom: 0; }
+        .footer__copyright p {
+          font-size: .75rem; } }
   .footer hr {
     background-color: #bbbbbb;
     height: 1px;
@@ -213,6 +317,9 @@ a {
     font-size: 0.625rem;
     line-height: 1rem;
     text-align: center; }
+    @media (min-width: 1200px) {
+      .footer p {
+        font-size: .875rem; } }
   .footer__develop {
     display: flex;
     align-items: center;
@@ -223,3 +330,42 @@ a {
       line-height: 1rem;
       margin-right: 10px;
       text-align: center; }
+  .footer__sencond-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%; }
+    @media (min-width: 1200px) {
+      .footer__sencond-block {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center; } }
+  .footer__logo {
+    display: none; }
+    @media (min-width: 1200px) {
+      .footer__logo {
+        display: block; }
+        .footer__logo img {
+          width: 50px; } }
+
+.button-fixed-whatsapp {
+  background-color: #25D366;
+  border-radius: 50%;
+  height: 64px;
+  width: 64px;
+  position: fixed;
+  left: 16px;
+  bottom: 16px; }
+  @media (min-width: 1200px) {
+    .button-fixed-whatsapp {
+      display: none; } }
+  .button-fixed-whatsapp a {
+    height: 100%;
+    font-size: 2.5rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .button-fixed-whatsapp a i {
+      color: #ffffff; }
