--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,5 +3,6 @@
 @import '../scss/extends';
 @import '../scss/global';
 @import '../scss/header';
+@import '../scss/banner';
 @import '../scss/showcase';
 @import '../scss/footer'; 
