--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -14,9 +14,14 @@ $cinza-font-escura: #262626;
 $cinza-claro: #e6e6e6;
 $cinza-claro2: #bbbbbb;
 $cinza-escuro: #707070;
-$azul-claro: #1C69D4;
+$azul-claro: #1C69D4; //usado no hover dos links também
 $azul-escuro: #0966AF;
 $verde: #25D366;
+
+//cores de hover dos botões
+$azul-hover: #0351BE;
+$verde-hover: #35AA61;
+$preto-hover: #575757;
 
 //Breakpoints
 //mobile
