--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @import '../scss/extends';
 @import '../scss/global';
 @import '../scss/header';
+@import '../scss/dropdown-gallery';
 @import '../scss/banner';
 @import '../scss/showcase';
 @import '../scss/footer'; 
