--- a/src/css/style.css
+++ b/src/css/style.css
@@ -118,6 +118,7 @@ a {
   height: 61px;
   width: 100%;
   transition: all 0.3s ease;
+  box-shadow: 0px 3px 6px #00000029;
   position: fixed;
   top: 0;
   z-index: 10; }
@@ -170,19 +171,29 @@ a {
     padding: 12px 18px;
     margin-right: 30px;
     width: auto; }
+    .header__button-default:hover {
+      background-color: #575757; }
     .header__button-default--whatsapp {
       background-color: #25D366; }
+      .header__button-default--whatsapp:hover {
+        background-color: #35AA61; }
     .header__button-default:last-of-type {
       margin-right: 0; }
   .header__desktop-menu {
     display: flex;
     padding: 0 5px; }
     .header__desktop-menu .header__menuitem {
-      margin-right: 60px; }
+      margin-right: 40px;
+      cursor: pointer; }
+      .header__desktop-menu .header__menuitem:hover a {
+        color: #1C69D4; }
       .header__desktop-menu .header__menuitem a {
         font-size: 0.875rem;
         font-family: "BMWBold", sans-serif;
-        font-weight: bold; }
+        font-weight: bold;
+        pointer-events: none;
+        padding: 0 10px;
+        display: table; }
   .header__logo a {
     display: flex; }
   .header__logo img {
@@ -200,15 +211,45 @@ a {
     font-size: 0.875rem;
     height: 45px;
     width: 100%; }
+    .header__button-fixed button:hover {
+      background-color: #0351BE; }
   @media (min-width: 1200px) {
     .header.scroll-on {
-      height: 124px;
-      -webkit-box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.75);
-      -moz-box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.75);
-      box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.75); } }
+      height: 124px; } }
+  .header.scroll-on .dropdown-gallery {
+    top: 124px; }
   @media (min-width: 1200px) {
     .header.scroll-on .header__flex {
       padding: 15px 0; } }
+
+.dropdown-gallery {
+  display: none;
+  box-shadow: 0px 3px 6px #00000029;
+  padding: 30px 0;
+  height: 380px;
+  width: 100%;
+  background-color: #ffffff;
+  position: fixed;
+  top: 150px; }
+  .dropdown-gallery .showcase__share span {
+    font-size: 0.75rem; }
+  .dropdown-gallery .showcase__share i {
+    font-size: 1.3rem; }
+  .dropdown-gallery .showcase__figure:hover img {
+    opacity: .5;
+    cursor: pointer; }
+  .dropdown-gallery .showcase__nome:hover {
+    cursor: pointer; }
+  .dropdown-gallery .splide__pagination {
+    bottom: -65px; }
+  .dropdown-gallery .splide__arrow {
+    background-color: transparent; }
+    .dropdown-gallery .splide__arrow svg {
+      fill: #262626; }
+  .dropdown-gallery .splide__arrow--next {
+    right: -35px; }
+  .dropdown-gallery .splide__arrow--prev {
+    left: -35px; }
 
 .splide-desktop {
   display: none; }
@@ -257,7 +298,7 @@ a {
   flex-direction: column;
   justify-content: center; }
 
-.showcase__titulo {
+.showcase__nome {
   color: #262626;
   font-size: 1.25rem;
   line-height: 1.65rem;
@@ -275,6 +316,8 @@ a {
     .showcase__button--cotacao {
       font-size: 0.75rem;
       width: 100%; } }
+  .showcase__button--cotacao:hover {
+    background-color: #0351BE; }
 
 .showcase__button--contato {
   background-color: #666666; }
@@ -283,11 +326,14 @@ a {
       display: none; } }
 
 .showcase__share {
-  display: flex; }
+  display: flex;
+  align-items: center; }
   .showcase__share span {
     font-size: 0.875rem; }
   .showcase__share a:first-of-type {
     margin: 0 16px; }
+  .showcase__share a:hover i {
+    color: #1C69D4; }
   .showcase__share i {
     font-size: 1.5rem; }
 
