--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,4 +6,5 @@
 @import '../scss/dropdown-gallery';
 @import '../scss/banner';
 @import '../scss/showcase';
+@import '../scss/modal-cotacao';
 @import '../scss/footer'; 
