Ajuste na chamada de fonts para projeto local

--- a/src/scss/_font.scss
+++ b/src/scss/_font.scss
@@ -1,13 +1,13 @@
 @font-face {
   font-family: 'BMWLight';
-  src: url("/src/fonts/BMW-Light.ttf") format("truetype");
+  src: url("../fonts/BMW-Light.ttf") format("truetype");
 }
 
 @font-face {
   font-family: 'BMWBold';
-  src: url('/src/fonts/BMW-Bold.ttf') format('truetype');
+  src: url('../fonts/BMW-Bold.ttf') format('truetype');
 }
-
+ 
 @font-face {
   font-family: 'bmw-icons';
   src: url('../icons/fontello/font/bmw-icons.eot?98364672');
