--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'BMWLight';
-  src: url("/src/fonts/BMW-Light.ttf") format("truetype"); }
+  src: url("../fonts/BMW-Light.ttf") format("truetype"); }
 
 @font-face {
   font-family: 'BMWBold';
-  src: url("/src/fonts/BMW-Bold.ttf") format("truetype"); }
+  src: url("../fonts/BMW-Bold.ttf") format("truetype"); }
 
 @font-face {
   font-family: 'bmw-icons';
